--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -11,18 +11,33 @@
 
 
     <TextView
+        android:id="@+id/textViewTitle"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:text="@string/mojivet"
         android:gravity="center"
-        android:textSize="50sp"/>
+        android:textSize="50sp"
+        android:textColor="#333333"
+        android:textStyle="bold"
+        android:shadowColor="#C0C0C0"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowRadius="3"/>
 
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/login"
         android:gravity="center"
-        android:textSize="28sp"/>
+        android:text="@string/login"
+        android:textSize="28sp"
+        android:textColor="#333333"
+        android:padding="16dp"
+        android:elevation="4dp"
+        android:layout_margin="16dp"
+        android:textStyle="bold"
+        android:shadowDx="2"
+        android:shadowDy="2"
+        android:shadowColor="#C0C0C0"/>
 
     <View
         android:layout_width="match_parent"
@@ -64,5 +79,43 @@
         android:layout_height="60dp"
         android:text="@string/sign_up"
         android:textSize="20sp" />
+
+    <View
+        android:layout_width="match_parent"
+        android:layout_height="40dp"/>
+
+    <androidx.cardview.widget.CardView
+        android:layout_width="300dp"
+        android:layout_height="wrap_content"
+        android:layout_marginTop="5dp"
+        android:layout_marginBottom="5dp"
+        android:layout_gravity="center"
+        app:cardCornerRadius="2dp">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:gravity="center"
+            android:padding="8dp">
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center"
+                android:text="@string/dhaveacc"
+                android:textSize="18sp"/>
+
+            <TextView
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:text="@string/sghere"
+                android:clickable="true"
+                android:focusable="true"
+                android:textSize="18sp"
+                android:textColor="@color/bright_blue"/>
+
+        </LinearLayout>
+    </androidx.cardview.widget.CardView>
 
 </LinearLayout>
