--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -60,6 +60,7 @@
         android:layout_gravity="center">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_email"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textEmailAddress"
@@ -72,6 +73,9 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:hint="@string/password"
+        android:textColorHint="#FF0000"
+        app:hintTextColor="#FF0000"
+        app:boxStrokeColor="#FF0000"
         app:startIconDrawable="@drawable/baseline_lock_24"
         app:endIconMode="password_toggle"
         app:errorEnabled="true"
@@ -80,19 +84,20 @@
         android:layout_marginTop="15dp">
 
         <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/et_password"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:inputType="textPassword"
-            android:background="@drawable/textborder1"
             android:textStyle="bold"/>
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
+        android:id="@+id/btnLogin"
         android:layout_width="300dp"
         android:layout_height="60dp"
         android:layout_gravity="center"
         android:layout_marginTop="20dp"
-        android:text="@string/sign_up"
+        android:text="@string/log_in"
         android:textSize="20sp"/>
 
 
